--- a/package.json
+++ b/package.json
@@ -46,7 +46,12 @@
     "es6-shim": "^0.33.3",
     "es7-reflect-metadata": "^1.5.5",
     "rxjs": "5.0.0-beta.0",
-    "zone.js": "0.5.14"
+    "zone.js": "0.5.14",
+    "bootstrap": "^3.3.6",
+    "css-loader": "^0.23.1",
+    "jquery": "^2.2.0",
+    "less": "^2.6.0",
+    "less-loader": "^2.2.2"
   },
   "devDependencies": {
     "compression-webpack-plugin": "^0.3.0",
